# cmake-gui-qt

./: CMakeLists.txt  README.md  main.cpp  mainwindow.ui
